--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.4",
+    "better-scroll": "^2.1.0",
     "core-js": "^3.6.5",
     "dplayer": "^1.26.0",
     "nuxt": "^2.14.6",
-    "vant": "^2.12.0"
+    "swiper": "^6.4.5",
+    "vant": "^2.12.0",
+    "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
